--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ set (CMAKE_CXX_STANDARD_REQUIRED 1)
 
 set (CMAKE_POSITION_INDEPENDENT_CODE 1)
 
+set_property (GLOBAL PROPERTY USE_FOLDERS 1)
+
 set (CMAKE_BUILD_COLOR_MAKEFILE 1)
 set (CMAKE_INSTALL_DEFAULT_COMPONENT_NAME ANSIDriver)
 
