Add a workaround to define SQLBindParam for iODBC

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,6 +1,7 @@
 function(declare_odbc_lib_targets libname UNICODE)
 
 unset(WORKAROUND_TRIM_TRAILING_NULL)
+unset(WORKAROUND_DEFINE_SQLBindParam)
 
 if (UNICODE)
     set(DRIVER_PREFIX Unicode)
@@ -14,6 +15,10 @@ else ()
     endif ()
 endif ()
 
+if ("${ODBC_IMPL}" STREQUAL "iODBC")
+    set(WORKAROUND_DEFINE_SQLBindParam 1)
+endif ()
+
 message (STATUS "${libname}: ${DRIVER_PREFIX}")
 
 configure_file (
@@ -22,6 +27,7 @@ configure_file (
 )
 
 unset(WORKAROUND_TRIM_TRAILING_NULL)
+unset(WORKAROUND_DEFINE_SQLBindParam)
 
 # In order to enable testing, put every non-public symbol to a static library (which is then used by shared library and unit-test binary).
 add_library(${libname}-impl STATIC
@@ -46,6 +52,7 @@ add_library(${libname}-impl STATIC
     type_info.cpp
 
 
+    ${CMAKE_CURRENT_BINARY_DIR}/platform/config_cmake${WIDECHAR_SUFFIX}.h
     platform/platform.h
 
     utils/utils.h
