--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -15,3 +15,4 @@
 
 #cmakedefine WORKAROUND_TRIM_TRAILING_NULL
 #cmakedefine WORKAROUND_DEFINE_SQLBindParam
+#cmakedefine WORKAROUND_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS
