--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,8 +1,9 @@
 function(declare_odbc_lib_targets libname UNICODE)
 
-unset(WORKAROUND_TRIM_TRAILING_NULL)
-unset(WORKAROUND_DEFINE_SQLBindParam)
-unset(WORKAROUND_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
+# See the usage of each workaround in the code, for comments.
+unset(WORKAROUND_ENABLE_TRIM_TRAILING_NULL)
+unset(WORKAROUND_ENABLE_DEFINE_SQLBindParam)
+unset(WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
 
 if (UNICODE)
     set(DRIVER_PREFIX Unicode)
@@ -11,14 +12,13 @@ else ()
     set(DRIVER_PREFIX ANSI)
     set(WIDECHAR_SUFFIX)
     if ("${ODBC_IMPL}" STREQUAL "UnixODBC")
-        # See the usage in the code for comments.
-        set(WORKAROUND_TRIM_TRAILING_NULL 1)
+        set(WORKAROUND_ENABLE_TRIM_TRAILING_NULL 1)
     endif ()
 endif ()
 
 if ("${ODBC_IMPL}" STREQUAL "iODBC")
-    set(WORKAROUND_DEFINE_SQLBindParam 1)
-    set(WORKAROUND_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS 1)
+    set(WORKAROUND_ENABLE_DEFINE_SQLBindParam 1)
+    set(WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS 1)
 endif ()
 
 message (STATUS "${libname}: ${DRIVER_PREFIX}")
@@ -28,9 +28,9 @@ configure_file (
     ${CMAKE_CURRENT_BINARY_DIR}/platform/config_cmake${WIDECHAR_SUFFIX}.h
 )
 
-unset(WORKAROUND_TRIM_TRAILING_NULL)
-unset(WORKAROUND_DEFINE_SQLBindParam)
-unset(WORKAROUND_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
+unset(WORKAROUND_ENABLE_TRIM_TRAILING_NULL)
+unset(WORKAROUND_ENABLE_DEFINE_SQLBindParam)
+unset(WORKAROUND_ENABLE_NO_UNICODE_CHARS_IN_COLUMN_NAMES_IN_TESTS)
 
 # In order to enable testing, put every non-public symbol to a static library (which is then used by shared library and unit-test binary).
 add_library(${libname}-impl STATIC
